<?xml version="1.0" encoding="UTF-8"?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.webflux</groupId>
    <artifactId>mongo2</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>mongo2</name>
    <description>Demo project for Spring Boot</description>

    <properties>
        <java.version>11</java.version>
        <rest-assured.version>4.3.0</rest-assured.version>
        <groovy.version>3.0.2</groovy.version>
        <junit-jupiter.version>5.8.2</junit-jupiter.version>
    </properties>

    <dependencies>
        <!--╔══════════════════════════════╗
            ║     GENERAL DEPENDENCIES     ║
            ╚══════════════════════════════╝-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <optional>true</optional>

        </dependency>

        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-tools</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
            <version>2.6.4</version>
        </dependency>

        <!--╔══════════════════════════════╗
            ║       DB DEPENDENCIES        ║
            ╚══════════════════════════════╝-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
        </dependency>

        <!-- ===================================
               INTEGRATION-TESTS USING TESTS-CONTAINERS
               see more:
             https://www.codeflow.site/pt/article/docker-test-containers
             https://www.youtube.com/watch?v=7ExYGJxGC8Q&list=WL&index=62&t=477s
             ===================================-->

        <!--╔══════════════════════════════╗
            ║      TESTS DEPENDENCIES      ║
            ╚══════════════════════════════╝-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.projectreactor.tools</groupId>
            <artifactId>blockhound</artifactId>
            <version>1.0.6.RELEASE</version>
        </dependency>

        <dependency>
            <groupId>com.github.javafaker</groupId>
            <artifactId>javafaker</artifactId>
            <version>1.0.2</version>
        </dependency>

        <!--╔═══════════════════════════════╗
            ║    SUITE - TESTS - JUNIT 5    ║
            ╚═══════════════════════════════╝-->
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite-engine</artifactId>
            <version>1.8.1</version>
        </dependency>


        <!--╔═══════════════════════════════╗
            ║ REST_ASSURE -> MODULO REATIVO ║
            ╚═══════════════════════════════╝-->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>spring-web-test-client</artifactId>
            <version>4.5.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>4.5.0</version>
            <scope>test</scope>
        </dependency>

        <!--╔═══════════════════════════════╗
            ║ REST_ASSURE -> MODULOS GERAIS ║
            ╚═══════════════════════════════╝-->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured-common</artifactId>
            <version>4.5.1</version>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>json-schema-validator</artifactId>
            <version>4.5.0</version>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>json-path</artifactId>
            <version>4.5.0</version>
        </dependency>

        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>xml-path</artifactId>
            <version>4.5.0</version>
        </dependency>

        <!--╔═══════════════════════════════╗
            ║ TESTS-CONTAINERS DEPENDENCIES ║
            ╠═══════════════════════════════╩════════════════════════════════════════╗
            ║ see more:                                                              ║
            ║    https://www.codeflow.site/pt/article/docker-test-containers         ║
            ║    https://www.youtube.com/watch?v=7ExYGJxGC8Q&list=WL&index=62&t=477s ║
            ╚════════════════════════════════════════════════════════════════════════╝-->
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>mongodb</artifactId>
            <version>1.16.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <version>1.16.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>1.16.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>22.0.0</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludeDevtools>false</excludeDevtools>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!--╔═══════════════════════════════╗
                ║ ERROR JAVA-15/13 + BLOCKHOUND ║
                ╠═══════════════════════════════╩════════════════════════════════════════╗
                ║ see more:                                                              ║
                ║    https://github.com/reactor/BlockHound/issues/33                     ║
                ║    OpenJDK 13 requires -XX:+AllowRedefinitionToAddDeleteMethods flag   ║
                ╚════════════════════════════════════════════════════════════════════════╝-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-surefire-plugin</artifactId>-->
            <!--                <version>2.22.2</version>-->
            <!--                <configuration>-->
            <!--                    <argLine>-XX:+AllowRedefinitionToAddDeleteMethods</argLine>-->
            <!--                </configuration>-->
            <!--            </plugin>-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release> <!-- <release>13/14/15</release> -->
                    <compilerArgs>--enable-preview</compilerArgs>
                    <compilerArgs>-Xlint:all</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>